# contains-snippet

./: .coverage  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/contains_snippet/: __main__.py  cli.py  matcher.py
test/: conftest.py
test/e2e/: test_e2e.py
test/integration/: test_cli.py  test_main.py
test/unit/: test_cli.py  test_main.py  test_main_module.py  test_matcher.py
